@@ -17,7 +17,7 @@ Description: Parametric and non-parametric
     which used to be available on CRAN.
 Authors@R: person("Michael", "Neely",
     email = "mneely@usc.edu", role = c("aut", "cre"))
-Version: 1.9.1
+Version: 1.9.2
 URL: http://www.lapk.org
 Date: 2020-02-29
 Depends: 
